Closed
Bug 1864165
Opened 2 years ago
Closed 2 years ago
ASAN failure on M-wmfme mda
Categories
(Core :: Audio/Video, defect)
Core
Audio/Video
Tracking
()
RESOLVED
FIXED
121 Branch
| Tracking | Status | |
|---|---|---|
| firefox121 | --- | fixed |
People
(Reporter: gerard-majax, Assigned: gerard-majax)
References
Details
Attachments
(1 file)
[task 2023-11-10T02:09:46.852Z] 02:09:46 INFO - GECKO(3468) | =================================================================
[task 2023-11-10T02:09:46.854Z] 02:09:46 ERROR - GECKO(3468) | ==4124==ERROR: AddressSanitizer: access-violation on unknown address 0x000000000058 (pc 0x7ffdfdf1e765 bp 0x00d3c17feb10 sp 0x00d3c17fea10 T9)
[task 2023-11-10T02:09:46.854Z] 02:09:46 INFO - GECKO(3468) | ==4124==The signal is caused by a READ memory access.
[task 2023-11-10T02:09:46.854Z] 02:09:46 INFO - GECKO(3468) | ==4124==Hint: address points to the zero page.
[task 2023-11-10T02:09:46.892Z] 02:09:46 INFO - GECKO(3468) | console.error: ({})
[task 2023-11-10T02:09:47.801Z] 02:09:47 INFO - GECKO(3468) | ==4124==WARNING: Failed to use and restart external symbolizer!
[task 2023-11-10T02:09:48.319Z] 02:09:48 INFO - GECKO(3468) | #0 0x7ffdfdf1e764 in mozilla::MozPromise<bool,nsresult,0>::Private::Reject<const nsresult &> /builds/worker/workspace/obj-build/dist/include/mozilla/MozPromise.h:1247
[task 2023-11-10T02:09:48.332Z] 02:09:48 INFO - GECKO(3468) | #1 0x7ffe044930df in mozilla::MozPromise<bool,nsresult,0>::ThenValue<`lambda at /builds/worker/checkouts/gecko/dom/media/ipc/MFMediaEngineChild.cpp:63:11',`lambda at /builds/worker/checkouts/gecko/dom/media/ipc/MFMediaEngineChild.cpp:103:11'>::DoResolveOrRejectInternal /builds/worker/workspace/obj-build/dist/include/mozilla/MozPromise.h:874
[task 2023-11-10T02:09:48.332Z] 02:09:48 INFO - GECKO(3468) | #2 0x7ffdfc3b8c2b in mozilla::MozPromise<bool,nsresult,1>::ThenValueBase::ResolveOrRejectRunnable::Run /builds/worker/workspace/obj-build/dist/include/mozilla/MozPromise.h:490
[task 2023-11-10T02:09:48.332Z] 02:09:48 INFO - GECKO(3468) | #3 0x7ffdfd037d01 in nsThread::ProcessNextEvent /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1192
[task 2023-11-10T02:09:48.333Z] 02:09:48 INFO - GECKO(3468) | #4 0x7ffdfd04874a in NS_ProcessNextEvent /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:480
[task 2023-11-10T02:09:48.333Z] 02:09:48 INFO - GECKO(3468) | #5 0x7ffdfe736a4b in mozilla::ipc::MessagePumpForNonMainThreads::Run /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:300
[task 2023-11-10T02:09:48.334Z] 02:09:48 INFO - GECKO(3468) | #6 0x7ffdfe6567a3 in MessageLoop::RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:363
[task 2023-11-10T02:09:48.334Z] 02:09:48 INFO - GECKO(3468) | #7 0x7ffdfe65656a in MessageLoop::Run /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:345
[task 2023-11-10T02:09:48.335Z] 02:09:48 INFO - GECKO(3468) | #8 0x7ffdfd02e27d in nsThread::ThreadFunc /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:370
[task 2023-11-10T02:09:48.335Z] 02:09:48 INFO - GECKO(3468) | #9 0x7ffdfbfdc717 in _PR_NativeRunThread /builds/worker/checkouts/gecko/nsprpub/pr/src/threads/combined/pruthr.c:399
[task 2023-11-10T02:09:48.336Z] 02:09:48 INFO - GECKO(3468) | #10 0x7ffdfbfb4aac in pr_root /builds/worker/checkouts/gecko/nsprpub/pr/src/md/windows/w95thred.c:139
[task 2023-11-10T02:09:48.336Z] 02:09:48 INFO - GECKO(3468) | #11 0x7ffe47e59362 in recalloc+0xa2 (C:\Windows\System32\ucrtbase.dll+0x180029362)
[task 2023-11-10T02:09:48.336Z] 02:09:48 INFO - GECKO(3468) | #12 0x7ffdfb200705 in __asan::AsanThread::ThreadStart /builds/worker/fetches/llvm-project/compiler-rt/lib/asan/asan_thread.cpp:291
[task 2023-11-10T02:09:48.336Z] 02:09:48 INFO - GECKO(3468) | #13 0x7ffe49e3257c in BaseThreadInitThunk+0x1c (C:\Windows\System32\KERNEL32.DLL+0x18001257c)
[task 2023-11-10T02:09:48.337Z] 02:09:48 INFO - GECKO(3468) | #14 0x7ffe1897b773 in patched_BaseThreadInitThunk /builds/worker/checkouts/gecko/toolkit/xre/dllservices/mozglue/WindowsDllBlocklist.cpp:561
[task 2023-11-10T02:09:48.338Z] 02:09:48 INFO - GECKO(3468) | #15 0x7ffe4aa6aa77 in RtlUserThreadStart+0x27 (C:\Windows\SYSTEM32\ntdll.dll+0x18005aa77)
[task 2023-11-10T02:09:48.338Z] 02:09:48 INFO - GECKO(3468) | AddressSanitizer can not provide additional info.
[task 2023-11-10T02:09:48.338Z] 02:09:48 INFO - GECKO(3468) | SUMMARY: AddressSanitizer: access-violation /builds/worker/workspace/obj-build/dist/include/mozilla/MozPromise.h:1247 in mozilla::MozPromise<bool,nsresult,0>::Private::Reject<const nsresult &>
[task 2023-11-10T02:09:48.339Z] 02:09:48 INFO - GECKO(3468) | Thread T9 created by T0 here:
[task 2023-11-10T02:09:48.460Z] 02:09:48 INFO - GECKO(3468) | #0 0x7ffdfb2021d2 in CreateThread /builds/worker/fetches/llvm-project/compiler-rt/lib/asan/asan_win.cpp:146
[task 2023-11-10T02:09:48.466Z] 02:09:48 INFO - GECKO(3468) | #1 0x7ffe47e5838d in beginthreadex+0x5d (C:\Windows\System32\ucrtbase.dll+0x18002838d)
[task 2023-11-10T02:09:48.467Z] 02:09:48 INFO - GECKO(3468) | #2 0x7ffdfbfb48e2 in _PR_MD_CREATE_THREAD /builds/worker/checkouts/gecko/nsprpub/pr/src/md/windows/w95thred.c:153
[task 2023-11-10T02:09:48.467Z] 02:09:48 INFO - GECKO(3468) | #3 0x7ffdfbfdd48e in _PR_NativeCreateThread /builds/worker/checkouts/gecko/nsprpub/pr/src/threads/combined/pruthr.c:1058
[task 2023-11-10T02:09:48.467Z] 02:09:48 INFO - GECKO(3468) | #4 0x7ffdfbfddc80 in _PR_CreateThread /builds/worker/checkouts/gecko/nsprpub/pr/src/threads/combined/pruthr.c:1184
[task 2023-11-10T02:09:48.468Z] 02:09:48 INFO - GECKO(3468) | #5 0x7ffdfbfd3b9f in PR_CreateThread /builds/worker/checkouts/gecko/nsprpub/pr/src/threads/combined/pruthr.c:1404
[task 2023-11-10T02:09:48.469Z] 02:09:48 INFO - GECKO(3468) | #6 0x7ffdfd0319d3 in nsThread::Init /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:619
[task 2023-11-10T02:09:48.469Z] 02:09:48 INFO - GECKO(3468) | #7 0x7ffdfd0455d0 in nsThreadManager::NewNamedThread /builds/worker/checkouts/gecko/xpcom/threads/nsThreadManager.cpp:597
[task 2023-11-10T02:09:48.470Z] 02:09:48 INFO - GECKO(3468) | #8 0x7ffdfd0530e3 in NS_NewNamedThread /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:176
[task 2023-11-10T02:09:48.470Z] 02:09:48 INFO - GECKO(3468) | #9 0x7ffe044e1641 in mozilla::RemoteDecoderManagerChild::Init /builds/worker/checkouts/gecko/dom/media/ipc/RemoteDecoderManagerChild.cpp:109
[task 2023-11-10T02:09:48.471Z] 02:09:48 INFO - GECKO(3468) | #10 0x7ffe05b41c24 in mozilla::dom::ContentChild::InitXPCOM /builds/worker/checkouts/gecko/dom/ipc/ContentChild.cpp:1424
[task 2023-11-10T02:09:48.471Z] 02:09:48 INFO - GECKO(3468) | #11 0x7ffe05b40ac0 in mozilla::dom::ContentChild::RecvSetXPCOMProcessAttributes /builds/worker/checkouts/gecko/dom/ipc/ContentChild.cpp:681
[task 2023-11-10T02:09:48.472Z] 02:09:48 INFO - GECKO(3468) | #12 0x7ffe05ec4c34 in mozilla::dom::PContentChild::OnMessageReceived /builds/worker/workspace/obj-build/ipc/ipdl/PContentChild.cpp:11612
[task 2023-11-10T02:09:48.472Z] 02:09:48 INFO - GECKO(3468) | #13 0x7ffdfe72deaf in mozilla::ipc::MessageChannel::DispatchAsyncMessage /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1813
[task 2023-11-10T02:09:48.473Z] 02:09:48 INFO - GECKO(3468) | #14 0x7ffdfe72b681 in mozilla::ipc::MessageChannel::DispatchMessage /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1732
[task 2023-11-10T02:09:48.473Z] 02:09:48 INFO - GECKO(3468) | #15 0x7ffdfe72c51d in mozilla::ipc::MessageChannel::RunMessage /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1525
[task 2023-11-10T02:09:48.474Z] 02:09:48 INFO - GECKO(3468) | #16 0x7ffdfe72cc81 in mozilla::ipc::MessageChannel::MessageTask::Run /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1623
[task 2023-11-10T02:09:48.474Z] 02:09:48 INFO - GECKO(3468) | #17 0x7ffdfd00386e in mozilla::RunnableTask::Run /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:549
[task 2023-11-10T02:09:48.475Z] 02:09:48 INFO - GECKO(3468) | #18 0x7ffdfcfe5725 in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:876
[task 2023-11-10T02:09:48.476Z] 02:09:48 INFO - GECKO(3468) | #19 0x7ffdfcfe0e75 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:699
[task 2023-11-10T02:09:48.477Z] 02:09:48 INFO - GECKO(3468) | #20 0x7ffdfcfe1ac4 in mozilla::TaskController::ProcessPendingMTTask /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:485
[task 2023-11-10T02:09:48.477Z] 02:09:48 INFO - GECKO(3468) | #21 0x7ffdfd0071b1 in mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:211:7'>::Run /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.h:548
[task 2023-11-10T02:09:48.478Z] 02:09:48 INFO - GECKO(3468) | #22 0x7ffdfd037885 in nsThread::ProcessNextEvent /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1198
[task 2023-11-10T02:09:48.478Z] 02:09:48 INFO - GECKO(3468) | #23 0x7ffdfd04874a in NS_ProcessNextEvent /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:480
[task 2023-11-10T02:09:48.479Z] 02:09:48 INFO - GECKO(3468) | #24 0x7ffdfe7359d7 in mozilla::ipc::MessagePump::Run /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:85
[task 2023-11-10T02:09:48.479Z] 02:09:48 INFO - GECKO(3468) | #25 0x7ffdfe6567a3 in MessageLoop::RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:363
[task 2023-11-10T02:09:48.480Z] 02:09:48 INFO - GECKO(3468) | #26 0x7ffdfe65656a in MessageLoop::Run /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:345
[task 2023-11-10T02:09:48.480Z] 02:09:48 INFO - GECKO(3468) | #27 0x7ffe06cff27c in nsBaseAppShell::Run /builds/worker/checkouts/gecko/widget/nsBaseAppShell.cpp:148
[task 2023-11-10T02:09:48.480Z] 02:09:48 INFO - GECKO(3468) | #28 0x7ffe06f3e287 in nsAppShell::Run /builds/worker/checkouts/gecko/widget/windows/nsAppShell.cpp:824
[task 2023-11-10T02:09:48.481Z] 02:09:48 INFO - GECKO(3468) | #29 0x7ffe0b8c0b6e in XRE_RunAppShell /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:721
[task 2023-11-10T02:09:48.481Z] 02:09:48 INFO - GECKO(3468) | #30 0x7ffdfe6567a3 in MessageLoop::RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:363
[task 2023-11-10T02:09:48.482Z] 02:09:48 INFO - GECKO(3468) | #31 0x7ffdfe65656a in MessageLoop::Run /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:345
[task 2023-11-10T02:09:48.483Z] 02:09:48 INFO - GECKO(3468) | #32 0x7ffe0b8c017d in XRE_InitChildProcess /builds/worker/checkouts/gecko/toolkit/xre/nsEmbedFunctions.cpp:656
[task 2023-11-10T02:09:48.483Z] 02:09:48 INFO - GECKO(3468) | #33 0x7ff742072713 in NS_internal_main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:375
[task 2023-11-10T02:09:48.484Z] 02:09:48 INFO - GECKO(3468) | #34 0x7ff7420714d8 in wmain /builds/worker/checkouts/gecko/toolkit/xre/nsWindowsWMain.cpp:151
[task 2023-11-10T02:09:48.484Z] 02:09:48 INFO - GECKO(3468) | #35 0x7ff742154347 in __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
[task 2023-11-10T02:09:48.485Z] 02:09:48 INFO - GECKO(3468) | #36 0x7ffe49e3257c in BaseThreadInitThunk+0x1c (C:\Windows\System32\KERNEL32.DLL+0x18001257c)
[task 2023-11-10T02:09:48.485Z] 02:09:48 INFO - GECKO(3468) | #37 0x7ffe4aa6aa77 in RtlUserThreadStart+0x27 (C:\Windows\SYSTEM32\ntdll.dll+0x18005aa77)
[task 2023-11-10T02:09:48.486Z] 02:09:48 INFO - GECKO(3468) | ==4124==ABORTING
| Assignee | ||
Comment 1•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → lissyx+mozillians
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•2 years ago
|
||
Pushed by alissy@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/21f2d7a82f5f
Fix ASAN failure with correct rejection r=padenot
Comment 4•2 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
status-firefox121:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•