Bug 1864165 - Fix ASAN failure with correct rejection r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D193296